Code review: immutable collections and minor cleanups