@@ -13,6 +13,8 @@
  */
 package io.trino.plugin.openpolicyagent;
 
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Streams;
 import io.trino.spi.connector.SchemaTableName;
 import io.trino.spi.security.Identity;
@@ -21,8 +23,6 @@ import org.junit.jupiter.api.Named;
 import org.junit.jupiter.params.provider.Arguments;
 
 import java.util.Collection;
-import java.util.Map;
-import java.util.Set;
 import java.util.function.BiFunction;
 import java.util.stream.Stream;
 
@@ -35,10 +35,10 @@ public class FilteringTestHelpers
     public static Stream<Arguments> emptyInputTestCases()
     {
         Stream<BiFunction<OpaAccessControl, SystemSecurityContext, Collection>> callables = Stream.of(
-                (authorizer, context) -> authorizer.filterViewQueryOwnedBy(context.getIdentity(), Set.<Identity>of()),
-                (authorizer, context) -> authorizer.filterCatalogs(context, Set.of()),
-                (authorizer, context) -> authorizer.filterSchemas(context, "some-catalog", Set.of()),
-                (authorizer, context) -> authorizer.filterTables(context, "some-catalog", Set.of()));
+                (authorizer, context) -> authorizer.filterViewQueryOwnedBy(context.getIdentity(), ImmutableSet.<Identity>of()),
+                (authorizer, context) -> authorizer.filterCatalogs(context, ImmutableSet.of()),
+                (authorizer, context) -> authorizer.filterSchemas(context, "some-catalog", ImmutableSet.of()),
+                (authorizer, context) -> authorizer.filterTables(context, "some-catalog", ImmutableSet.of()));
         Stream<String> testNames = Stream.of("filterViewQueryOwnedBy", "filterCatalogs", "filterSchemas", "filterTables");
         return Streams.zip(testNames, callables, (name, method) -> Arguments.of(Named.of(name, method)));
     }
@@ -46,15 +46,15 @@ public class FilteringTestHelpers
     public static Stream<Arguments> prepopulatedErrorCases()
     {
         Stream<BiFunction<OpaAccessControl, SystemSecurityContext, ?>> callables = Stream.of(
-                (authorizer, context) -> authorizer.filterViewQueryOwnedBy(context.getIdentity(), Set.of(Identity.ofUser("foo"))),
-                (authorizer, context) -> authorizer.filterCatalogs(context, Set.of("foo")),
-                (authorizer, context) -> authorizer.filterSchemas(context, "some-catalog", Set.of("foo")),
-                (authorizer, context) -> authorizer.filterTables(context, "some-catalog", Set.of(new SchemaTableName("foo", "bar"))),
+                (authorizer, context) -> authorizer.filterViewQueryOwnedBy(context.getIdentity(), ImmutableSet.of(Identity.ofUser("foo"))),
+                (authorizer, context) -> authorizer.filterCatalogs(context, ImmutableSet.of("foo")),
+                (authorizer, context) -> authorizer.filterSchemas(context, "some-catalog", ImmutableSet.of("foo")),
+                (authorizer, context) -> authorizer.filterTables(context, "some-catalog", ImmutableSet.of(new SchemaTableName("foo", "bar"))),
                 (authorizer, context) -> authorizer.filterColumns(
                         context,
                         "some-catalog",
-                        Map.of(
-                                SchemaTableName.schemaTableName("some-schema", "some-table"), Set.of("some-col"))));
+                        ImmutableMap.of(
+                                SchemaTableName.schemaTableName("some-schema", "some-table"), ImmutableSet.of("some-col"))));
         Stream<String> testNames = Stream.of("filterViewQueryOwnedBy", "filterCatalogs", "filterSchemas", "filterTables", "filterColumns");
         return createIllegalResponseTestCases(Streams.zip(testNames, callables, (name, method) -> Arguments.of(Named.of(name, method))));
     }
